src/modules/file_upload/file_upload.scss
.mdl-file_upload {
  margin: 0;
  border: 0;
  padding: 0;
  position: relative;

  input {
    appearance: none;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
  }

  &__subtitle {
    font-size: pxToRem($sizeFontRegular);
    margin: 0;
  }

  &__dropzone {
    margin-top: pxToRem($sizeTiny);
    padding: pxToRem($sizeSmallHuge);
    border: 2px dashed $colorBlack40;
    display: flex;
    flex-direction: column;
    align-items: center;

    @include transition(background border-color);

    p {
      color: $colorBlack60;
      text-align: center;
      margin-top: 0;
    }

    &-hint {
      display: none;
      margin-bottom: 0;
    }

    &--dragover {
      background: rgba($colorBlue, 0.5);
      border-color: $colorBlue;
    }
  }

  &__button {
    justify-content: space-around;

    @include mq($to: medium) {
      width: 100%;
    }
  }

  &--duplicated:not(:first-child) {
    .atm-heading,
    .mdl-file_upload__subtitle {
      @include visuallyhidden;
    }
  }

  &--no-dropzone {

    .mdl-file_upload__dropzone {
      display: none;
    }
  }

  &--active-dropzone {

    .mdl-file_upload__dropzone-hint {
      display: block;
    }
  }

  &:not(:first-child) {
    .atm-heading,
    .mdl-file_upload__subtitle {
      @include visuallyhidden;
    }
  }

  &__list {
    @include resetList;
  }

  &__error {
    transform: translateY(-50%) scaleY(0);
    transition: transform 400ms, opacity 400ms, height 400ms ease-in-out;

    width: 100%;
    font-size: pxToRem($sizeFontTiny);
    line-height: $sizeLineHeightBase;
    margin: 0;
    padding: $sizeMini 0 $sizeMini pxToRem($sizeRegular + 2px);
    color: $colorWhite;
    background-color: $colorRed;

    margin-top: pxToRem($sizeTiny);
    display: none;

    &:not(:first-of-type) {
      margin-top: 0;
    }

    &:first-of-type {
      border-top-left-radius: 2px;
      border-top-right-radius: 2px;
    }

    &:last-of-type {
      border-bottom-right-radius: 2px;
      border-bottom-left-radius: 2px;
    }

    &.show {
      display: block;
      transform: translateY(0) scaleY(1);
    }
  }

  /** STYLING FOR THE FILE */
  &__file {
    flex-grow: 1;
    display: flex;
    align-items: flex-start;

    border-bottom: 1px solid $colorBlack20;

    @include sizeCurve(padding-top padding-bottom, tiny);

    &-meta {
      display: flex;
      flex-direction: column;
      flex-grow: 1;
    }

    &-title {
      font-size: pxToRem($sizeFontRegular);
      font-family: $fontFamilyBlack;

      color: $colorBlack60;
    }

    &-info {
      font-size: pxToRem($sizeFontTiny);
      color: $colorBlack60;
    }

    &-delete {
      line-height: 0;

      @include sizeCurve(margin-top, tiny);

      svg {
        min-width: pxToRem(24);
        min-height: pxToRem(24);
      }

      use {
        fill: $colorBlack60;
      }

      &:hover use {
        fill: $colorBlack;
      }
    }
  }
}

